@@ -2,6 +2,7 @@
 
 	* Resolves #55081: Fatal error in Static Info Tables Manager module in TYPO3 6.2
 	* Follow-up to #55081: Fatal error in Static Info Tables Manager module in TYPO3 6.2
+	* Clean-up in class SJBR\StaticInfoTables\Hook\Backend\Form\SuggestReceiver
 
 2013-12-03  Stanislas Rolland  <typo3@sjbr.ca>
 
